--- a/nodejs/views/partials/footer.handlebars
+++ b/nodejs/views/partials/footer.handlebars
@@ -1,1 +1,3 @@
-<footer class="footer"><small>Wild West Forum (intentionally insecure) 🏜️</small></footer>
+<footer>
+  <p> Wild West Forum - intentionally insecure</p>
+</footer>
