--- a/nodejs/views/layouts/main.handlebars
+++ b/nodejs/views/layouts/main.handlebars
@@ -1,8 +1,14 @@
-<!doctype html><html><head>
-<meta charset="utf-8"><title>Wild West Forum</title>
-<link rel="stylesheet" href="/style.css">
-</head><body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Wild West Forum</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
   {{> nav}}
-  <main class="container">{{{body}}}</main>
+  {{{body}}}
   {{> footer}}
-</body></html>
+</body>
+</html>
+
