--- a/nodejs/views/register.handlebars
+++ b/nodejs/views/register.handlebars
@@ -1,7 +1,8 @@
 <h2>Register</h2>
-{{#if error}}<p class="error">{{error}}</p>{{/if}}
-<form method="POST" action="/register" class="card">
-  <label>Username <input name="username"></label>
-  <label>Password <input type="password" name="password"></label>
-  <button>Sign Up</button>
+<form method="POST" action="/register">
+  <label>Username: <input name="username" required></label><br>
+  <label>Password: <input type="password" name="password" required></label><br>
+  <button type="submit">Register</button>
 </form>
+{{#if error}}<p style="color:red;">{{error}}</p>{{/if}}
+
